<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="103dp"
        android:layout_height="27dp"
        android:text="@string/cpu"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="162dp"
        android:layout_height="71dp"
        android:text="@string/intel_core_processor"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="296dp" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="107dp"
        android:layout_height="43dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="162dp"
        android:layout_height="71dp"
        android:text="@string/ryzen_processor"
        tools:layout_editor_absoluteX="192dp"
        tools:layout_editor_absoluteY="296dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="94dp"
        android:layout_height="161dp"
        app:srcCompat="@drawable/core_i9_gpu"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="109dp"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="94dp"
        android:layout_height="161dp"
        app:srcCompat="@drawable/ryzen_5_gpu"
        tools:layout_editor_absoluteX="244dp"
        tools:layout_editor_absoluteY="109dp"
        android:contentDescription="@string/todo" />
</android.support.constraint.ConstraintLayout>