<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:text="@string/proccesor_3"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="478dp" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="107dp"
        android:layout_height="43dp"
        android:layout_marginBottom="22dp"
        android:layout_marginEnd="18dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:text="@string/proccesor_4"
        tools:layout_editor_absoluteX="233dp"
        tools:layout_editor_absoluteY="479dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:text="@string/proccesor_2"
        tools:layout_editor_absoluteX="233dp"
        tools:layout_editor_absoluteY="256dp" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="94dp"
        android:layout_height="161dp"
        android:layout_marginBottom="14dp"
        android:layout_marginTop="34dp"
        app:layout_constraintBottom_toTopOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:srcCompat="@drawable/core_i9_gpu"
        tools:layout_editor_absoluteX="233dp"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="94dp"
        android:layout_height="161dp"
        android:layout_marginEnd="92dp"
        android:layout_marginLeft="47dp"
        android:layout_marginRight="92dp"
        android:layout_marginStart="47dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView8"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/core_i9_gpu"
        tools:layout_editor_absoluteY="81dp"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="94dp"
        android:layout_height="161dp"
        android:layout_marginEnd="57dp"
        android:layout_marginLeft="92dp"
        android:layout_marginRight="57dp"
        android:layout_marginStart="92dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:srcCompat="@drawable/core_i9_gpu"
        tools:layout_editor_absoluteY="293dp"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="94dp"
        android:layout_height="161dp"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/core_i9_gpu"
        tools:layout_editor_absoluteY="293dp"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="115dp"
        android:layout_height="31dp"
        android:layout_marginBottom="34dp"
        android:layout_marginEnd="128dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="128dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="16dp"
        android:text="@string/intell_proccesors"
        app:layout_constraintBottom_toTopOf="@+id/imageView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinner1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proccesor_1"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="256dp" />
</android.support.constraint.ConstraintLayout>
