<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="94dp"
        android:layout_height="161dp"
        android:layout_marginBottom="14dp"
        android:layout_marginEnd="274dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="274dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="27dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner1"
        app:srcCompat="@drawable/memory"
        android:contentDescription="@string/todo" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="107dp"
        android:layout_height="43dp"
        android:layout_marginBottom="27dp"
        android:layout_marginEnd="18dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/imageView7"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="59dp"
        android:layout_marginBottom="178dp"
        android:layout_marginEnd="177dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="177dp"
        android:layout_marginStart="7dp"
        android:text="@string/description_n_hiering_beschrijf_ik_het_product"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="103dp"
        android:layout_height="27dp"
        android:layout_marginBottom="218dp"
        android:layout_marginEnd="140dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="140dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="16dp"
        android:text="@string/memory"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinner1"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>